@@ -26,7 +26,7 @@ gnometris       f       N       Y       Y       Y       Y
 gnomine         Y       Y       Y       Y       Y       Y
 gnotravex       Y       Y       Y       Y       Y       Y
 gnotski         Y       e       Y       Y       Y       Y
-gtali           Y       N       Y       Y       Y       Y
+gtali           Y       Y       Y       Y       Y       Y
 iagno           Y       N       Y       Y       Y       Y
 mahjongg        Y       P       Y       Y       Y       Y
 same-gnome      Y       N       Y       Y       Y       Y
