@@ -1,3 +1,7 @@
+2003-08-05  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* gyahtzee.c: GConf return value checks.
+
 2003-08-03  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* gtali.schemas.in:
